<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tdt4100-v2021</groupId>
  <artifactId>project</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>TDT4100-Project</name>
  <packaging>jar</packaging>
  
  <dependencies>
<dependency>
	<groupId>org.loadui</groupId>
	<artifactId>testFx</artifactId>
	<version>3.1.2</version>
</dependency>
  	<!--  JavaFX FXML -->
  	<dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-controls</artifactId>
    <version>19</version>
  </dependency>
  <dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-FXML</artifactId>
    <version>19</version>
  </dependency>
  <dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-media</artifactId>
    <version>19</version>
  </dependency>
  	<!--  JUnit 5 -->
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  		<version>5.7.0</version>
  	</dependency>
  </dependencies>
  
  
  <build>
  	<plugins>
  		<plugin>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.8.0</version>
  			<configuration>
  				<release>18</release>
  				<compilerArgs>
  					--enable-preview
  				</compilerArgs>
  			</configuration>
  		</plugin>
  		<plugin>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>--enable-preview</argLine>
  			</configuration>
  		</plugin>
  		<plugin>
  			<artifactId>maven-failsafe-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>--enable-preview</argLine>
  			</configuration>
  		</plugin>
  		<plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <configuration>
                    <mainClass>HPack/HPack.HunterApp</mainClass>
                </configuration>
            </plugin>
  	</plugins>
  </build>
</project>